[package]
name = "basic-blockchain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "basicblockchainlib"
path = "src/lib.rs"

[[bin]]
name = "basic-blockchain"
path = "src/main.rs"


[dependencies]
crypto-hash = "0.3.4"
hex = "0.4.3"
